src/objects/inscor__Integration_Account_Setup__c.object
<CustomObject>
    <fields>
        <fullName>inscor__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Integration Account Setup</relationshipLabel>
        <relationshipName>Integration_Account_Setup</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__CIC__c</fullName>
        <label>CIC</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company</label>
        <referenceTo>inscor__Company__c</referenceTo>
        <relationshipLabel>Integration Account Setup</relationshipLabel>
        <relationshipName>Integration_Account_Setup</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Employee_Assigned_To_The_Message__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Employee Assigned To The Message</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Integration_Account_Setup</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Integration Account Setup</label>
    <nameField>
        <displayFormat>IAS-{0}</displayFormat>
        <label>Integration Account Setup Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Integration Account Setup</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>